--- a/src/app/components/search/SearchBook.scss
+++ b/src/app/components/search/SearchBook.scss
@@ -17,6 +17,11 @@
   outline: none;
   font-size: 16px;
   background-color: #f7f7f7;
+  
+  &:focus {
+    border: 1px solid #787575;
+  }
+  
 
   @media screen and (max-width: 500px) {
     margin-bottom: 10px;
@@ -28,10 +33,16 @@
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
-  background-color: #FFCE1A;
+  background-color: #ffce1A;
+  border: 1px solid #ffce1A;
   color: black;
   font-size: 16px;
   cursor: pointer;
+
+  &:hover {
+    background-color: #ffc800;
+    border: 1px solid #ffc800;
+  }
 
   @media screen and (max-width: 500px) {
     margin-left: 0px;
